# svg

./: BUG_REPORT.md  Cargo.toml  FLUENT2_IMPLEMENTATION.md
icon-cli/: Cargo.toml
icon-cli/src/: main.rs
icon-cli/tests/: cli.rs
icon-engine/: Cargo.toml
icon-engine/src/: gradient_parser.rs  lib.rs  style_generator.rs  svg_processor.rs
scripts/: kill-active-window-kwin.sh
svg-maker-gui/: CONFIGURE_UPLOAD_FIX_REPORT.md  integration_test.md  package-lock.json  package.json  playwright.config.ts  test-icon-services.js  test-lucide-direct.js  test-services-debug.js  test-theme-system.html  test_fluent_parser.js
svg-maker-gui/playwright-report/: index.html
svg-maker-gui/public/: index.html  sw.js
svg-maker-gui/src/: App.css  App.tsx  index.tsx  test-browser-console.js  test-icon-services.js
svg-maker-gui/src/components/: BatchProcessor.css  BatchProcessor.tsx  DashboardOverview.css  DashboardOverview.tsx  FileUpload.css  FileUpload.tsx  FileUploadFixed.css  FileUploadFixed.tsx  FileUploadNew.css  FileUploadNew.tsx  FluentUIIconBrowser.css  FluentUIIconBrowser.tsx  FluentUIIconDemo.tsx  FolderTreeBrowser.css  FolderTreeBrowser.tsx  FolderUpload.css  FolderUpload.tsx  GeneratedIcons.ts  GitHubRepoInput.css  GitHubRepoInput.tsx  IconCacheLoader.css  IconCacheLoader.tsx  IconGrid.css  IconGrid.tsx  IconPackBrowser.css  IconPackBrowser.tsx  IconPackDemo.css  IconPackDemo.tsx  IconPreview.tsx  IconRenderer.tsx  IconRepositoryBrowser-responsive-fixes.css  IconRepositoryBrowser.css  IconRepositoryBrowser.tsx  (+28 more)
svg-maker-gui/test-results/: playwright-results.json
(+61 files in other folders)
