[package]
name = "icon-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
icon-engine = { path = "../icon-engine", features = ["cli"] }
clap = { workspace = true }
rayon = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
